tests/error/function_nested.gw
#! [contains]
fun void test() {
  fun void nested(){}
}
